--- a/rust_dev_preview/examples/aurora/Cargo.toml
+++ b/rust_dev_preview/examples/aurora/Cargo.toml
@@ -11,7 +11,7 @@ version = "0.1.0"
 [dependencies]
 anyhow = "1.0.75"
 assert_matches = "1.5.0"
-aws-config = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next" }
+aws-config = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next", features = ["behavior-version-latest"]}
 aws-smithy-types = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next" }
 aws-smithy-runtime-api = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next" }
 aws-sdk-rds = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next" }
