--- a/rust_dev_preview/examples/autoscalingplans/Cargo.toml
+++ b/rust_dev_preview/examples/autoscalingplans/Cargo.toml
@@ -11,7 +11,7 @@ edition = "2021"
 
 [dependencies]
 aws-sdk-autoscalingplans = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next" }
-aws-config = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next" }
+aws-config = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next", features = ["behavior-version-latest"]}
 aws-types = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next" }
 tokio = { version = "1.20.1", features = ["full"] }
 clap = { version = "~4.4", features = ["derive"] }
