--- a/rust_dev_preview/examples/glue/Cargo.toml
+++ b/rust_dev_preview/examples/glue/Cargo.toml
@@ -13,7 +13,7 @@ name = "scenario"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-aws-config = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next" }
+aws-config = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next", features = ["behavior-version-latest"]}
 aws-sdk-glue = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next" }
 aws-sdk-s3 = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next" }
 aws-http = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next" }
