--- a/rust_dev_preview/examples/rds/Cargo.toml
+++ b/rust_dev_preview/examples/rds/Cargo.toml
@@ -14,7 +14,7 @@ version = "0.1.0"
 anyhow = "1.0.75"
 assert_matches = "1.5.0"
 async-trait = "0.1.73"
-aws-config = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next" }
+aws-config = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next", features = ["behavior-version-latest"]}
 aws-smithy-http = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next" }
 aws-smithy-runtime-api = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next" }
 aws-sdk-rds = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next" }
