--- a/rust_dev_preview/examples/s3/Cargo.toml
+++ b/rust_dev_preview/examples/s3/Cargo.toml
@@ -21,7 +21,7 @@ assert_cmd = "2.0"
 predicates = "3.0.3"
 
 [dependencies]
-aws-config = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next" }
+aws-config = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next", features = ["behavior-version-latest"]}
 # snippet-start:[s3.rust.s3-object-lambda-cargo.toml]
 aws-endpoint = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next" }
 # snippet-end:[s3.rust.s3-object-lambda-cargo.toml]
