--- a/rust_dev_preview/examples/sending-presigned-requests/Cargo.toml
+++ b/rust_dev_preview/examples/sending-presigned-requests/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-aws-config = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next" }
+aws-config = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next", features = ["behavior-version-latest"]}
 aws-sdk-s3 = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next" }
 aws-smithy-client = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next" }
 http = "0.2.6"
