--- a/rust_dev_preview/examples/stepfunction/Cargo.toml
+++ b/rust_dev_preview/examples/stepfunction/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Daniele Frasca <https://github.com/ymwjbxxq/>"]
 edition = "2021"
 
 [dependencies]
-aws-config = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next" }
+aws-config = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next", features = ["behavior-version-latest"]}
 aws-sdk-sfn = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next" }
 tokio = { version = "1.20.1", features = ["full"] }
 clap = { version = "~4.4", features = ["derive"] }
