--- a/rust_dev_preview/examples/textract/Cargo.toml
+++ b/rust_dev_preview/examples/textract/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2021"
 # For more keys and their definitions, see https://doc.rust-lang.org/cargo/reference/manifest.html.
 
 [dependencies]
-aws-config = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next" }
+aws-config = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next", features = ["behavior-version-latest"]}
 aws-sdk-textract = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next" }
 tokio = { version = "1.27", features = ["full"] }
 structopt = { version = "0.3", default-features = false }
