--- a/javav2/example_code/ecs/pom.xml
+++ b/javav2/example_code/ecs/pom.xml
@@ -6,15 +6,16 @@
     <groupId>org.example</groupId>
     <artifactId>ECSProjectV2</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <properties>
-        <java.version>1.8</java.version>
+   <properties>
+        <maven.compiler.target>17</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source>
     </properties>
     <dependencyManagement>
         <dependencies>
             <dependency>
                 <groupId>software.amazon.awssdk</groupId>
                 <artifactId>bom</artifactId>
-                <version>2.20.45</version>
+                <version>2.21.20</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
