--- a/javav2/example_code/personalize/pom.xml
+++ b/javav2/example_code/personalize/pom.xml
@@ -6,9 +6,9 @@
     <groupId>Personalize</groupId>
     <artifactId>Personalize</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java.version>1.8</java.version>
+   <properties>
+        <maven.compiler.target>17</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source>
     </properties>
     <build>
         <plugins>
@@ -36,7 +36,7 @@
             <dependency>
                 <groupId>software.amazon.awssdk</groupId>
                 <artifactId>bom</artifactId>
-                <version>2.20.45</version>
+                <version>2.21.20</version>
                 <type>pom</type>
             </dependency>
         </dependencies>
