--- a/.doc_gen/metadata/bedrock-runtime_metadata.yaml
+++ b/.doc_gen/metadata/bedrock-runtime_metadata.yaml
@@ -100,6 +100,14 @@ bedrock-runtime_InvokeJurassic2:
   synopsis: invoke the AI21 Labs Jurassic-2 model on &BR; to run an inference.
   category:
   languages:
+    Go:
+      versions:
+        - sdk_version: 2
+          github: gov2/bedrock-runtime
+          excerpts:
+            - description:
+              snippet_tags:
+                - gov2.bedrock-runtime.InvokeJurassic2
     Java:
       versions:
         - sdk_version: 2
