--- a/.doc_gen/metadata/bedrock-runtime_metadata.yaml
+++ b/.doc_gen/metadata/bedrock-runtime_metadata.yaml
@@ -47,7 +47,7 @@ bedrock-runtime_InvokeClaude:
         - sdk_version: 2
           github: gov2/bedrock-runtime
           excerpts:
-            - description:
+            - description: Invoke the Anthropic Claude 2 foundation model.
               snippet_tags:
                 - gov2.bedrock-runtime.InvokeClaude
     Java:
@@ -74,6 +74,14 @@ bedrock-runtime_InvokeClaude:
             - description: Invoke the Anthropic Claude 2 foundation model.
               snippet_tags:
                 - python.example_code.bedrock-runtime.InvokeAnthropicClaude
+    SAP ABAP:
+      versions:
+        - sdk_version: 1
+          github: sap-abap/services/bdr
+          excerpts:
+            - description: Invoke the Anthropic Claude 2 foundation model. This example uses features of /US2/CL_JSON which might not be available on some NetWeaver versions.
+              snippet_tags:
+                - bdr.abapv1.invokemodel_claude_v2
   services:
     bedrock-runtime: {InvokeModel}
 
@@ -105,7 +113,7 @@ bedrock-runtime_InvokeJurassic2:
         - sdk_version: 2
           github: gov2/bedrock-runtime
           excerpts:
-            - description:
+            - description: Invoke the AI21 Labs Jurassic-2 foundation model.
               snippet_tags:
                 - gov2.bedrock-runtime.InvokeJurassic2
     Java:
@@ -128,7 +136,6 @@ bedrock-runtime_InvokeJurassic2:
       versions:
         - sdk_version: 3
           github: python/example_code/bedrockruntime
-          sdkguide:
           excerpts:
             - description: Invoke the AI 21 Labs Jurassic-2 foundation model.
               snippet_tags:
@@ -164,7 +171,7 @@ bedrock-runtime_InvokeLlama2:
         - sdk_version: 2
           github: gov2/bedrock-runtime
           excerpts:
-            - description:
+            - description: Invoke the Meta Llama 2 Chat foundation model.
               snippet_tags:
                 - gov2.bedrock-runtime.InvokeLlama2
     Java:
@@ -172,7 +179,7 @@ bedrock-runtime_InvokeLlama2:
         - sdk_version: 2
           github: javav2/example_code/bedrock-runtime
           excerpts:
-            - description: Invoke the Meta Llama 2 foundation model.
+            - description: Invoke the Meta Llama 2 Chat foundation model.
               snippet_tags:
                 - bedrock-runtime.java2.invoke_llama2.main
     PHP:
@@ -180,16 +187,15 @@ bedrock-runtime_InvokeLlama2:
         - sdk_version: 3
           github: php/example_code/bedrock-runtime
           excerpts:
-            - description: Invoke the Meta Llama 2 foundation model.
+            - description: Invoke the Meta Llama 2 Chat foundation model.
               snippet_tags:
                 - php.example_code.bedrock-runtime.service.invokeLlama2
     Python:
       versions:
         - sdk_version: 3
           github: python/example_code/bedrockruntime
-          sdkguide:
           excerpts:
-            - description: Invoke the Meta Llama 2 foundation model.
+            - description: Invoke the Meta Llama 2 Chat foundation model.
               snippet_tags:
                 - python.example_code.bedrock-runtime.InvokeMetaLlama2
   services:
@@ -234,6 +240,14 @@ bedrock-runtime_InvokeStableDiffusion:
             - description: Invoke the Stability.ai Stable Diffusion foundation model.
               snippet_tags:
                 - python.example_code.bedrock-runtime.InvokeStableDiffusion
+    SAP ABAP:
+      versions:
+        - sdk_version: 1
+          github: sap-abap/services/bdr
+          excerpts:
+            - description: Invoke the Stability.ai Stable Diffusion foundation model.
+              snippet_tags:
+                - bdr.abapv1.invokemodel_stable_diffusion
   services:
     bedrock-runtime: {InvokeModel}
 
@@ -265,7 +279,7 @@ bedrock-runtime_InvokeModelWithResponseStream:
         - sdk_version: 2
           github: gov2/bedrock-runtime
           excerpts:
-            - description:
+            - description: Invoke Anthropic Claude and process the response stream.
               snippet_tags:
                 - gov2.bedrock-runtime.InvokeModelWithResponseStream
     Java:
@@ -273,7 +287,7 @@ bedrock-runtime_InvokeModelWithResponseStream:
         - sdk_version: 2
           github: javav2/example_code/bedrock-runtime
           excerpts:
-            - description: Invoke Anthropic Claude on &BR; and process the response stream.
+            - description: Invoke Anthropic Claude and process the response stream.
               snippet_tags:
                 - bedrock-runtime.java2.invoke_model_with_response_stream.main
     Python:
@@ -281,7 +295,7 @@ bedrock-runtime_InvokeModelWithResponseStream:
         - sdk_version: 3
           github: python/example_code/bedrock-runtime
           excerpts:
-            - description: Invoke Anthropic Claude on &BR; and process the response stream.
+            - description: Invoke Anthropic Claude and process the response stream.
               snippet_tags:
                 - python.example_code.bedrock-runtime.InvokeModelWithResponseStream
   services:
