--- a/.doc_gen/metadata/bedrock-runtime_metadata.yaml
+++ b/.doc_gen/metadata/bedrock-runtime_metadata.yaml
@@ -316,7 +316,7 @@ bedrock-runtime_Scenario_Invoke_models:
         - sdk_version: 2
           github: gov2/bedrock-runtime
           excerpts:
-            - description: Invoke multiple foundation models.
+            - description: Invoke multiple LLMs on &BR;.
               snippet_tags:
                 - gov2.bedrock-runtime.Scenario_InvokeModels
     PHP:
