--- a/javav2/example_code/translate/pom.xml
+++ b/javav2/example_code/translate/pom.xml
@@ -8,7 +8,9 @@
     <version>1.0-SNAPSHOT</version>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java.version>1.8</java.version>
+        <java.version>17</java.version>
+        <maven.compiler.target>17</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source>
     </properties>
     <repositories>
         <repository>
