--- a/javav2/example_code/workdocs/pom.xml
+++ b/javav2/example_code/workdocs/pom.xml
@@ -7,11 +7,12 @@
     <groupId>WorkdocsJ2</groupId>
     <artifactId>WorkdocsJ2</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <properties>
+ <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java.version>1.8</java.version>
+        <java.version>17</java.version>
+        <maven.compiler.target>17</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source>
     </properties>
-
     <build>
         <plugins>
             <plugin>
@@ -38,7 +39,7 @@
             <dependency>
                 <groupId>software.amazon.awssdk</groupId>
                 <artifactId>bom</artifactId>
-                <version>2.20.45</version>
+                <version>2.21.20</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
