--- a/javav2/example_code/cloudfront/pom.xml
+++ b/javav2/example_code/cloudfront/pom.xml
@@ -7,6 +7,8 @@
     <artifactId>CloudFrontJ2</artifactId>
     <version>1.0-SNAPSHOT</version>
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <java.version>17</java.version>
         <maven.compiler.target>17</maven.compiler.target>
         <maven.compiler.source>17</maven.compiler.source>
     </properties>
