update to jdk 17

--- a/javav2/example_code/lookoutvision/pom.xml
+++ b/javav2/example_code/lookoutvision/pom.xml
@@ -4,7 +4,9 @@
     <groupId>Lookout-for-VisionV2</groupId>
     <artifactId>Lookout-for-VisionV2</artifactId>
     <version>1.0-SNAPSHOT</version>
-   <properties>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <java.version>17</java.version>
         <maven.compiler.target>17</maven.compiler.target>
         <maven.compiler.source>17</maven.compiler.source>
     </properties>
