--- a/javav2/example_code/migrationhub/pom.xml
+++ b/javav2/example_code/migrationhub/pom.xml
@@ -7,7 +7,9 @@
     <artifactId>MigrationHubJ2</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
-   <properties>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <java.version>17</java.version>
         <maven.compiler.target>17</maven.compiler.target>
         <maven.compiler.source>17</maven.compiler.source>
     </properties>
