--- a/javav2/example_code/support/pom.xml
+++ b/javav2/example_code/support/pom.xml
@@ -8,6 +8,8 @@
     <artifactId>SupportJ2</artifactId>
     <version>1.0-SNAPSHOT</version>
      <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <java.version>17</java.version>
         <maven.compiler.target>17</maven.compiler.target>
         <maven.compiler.source>17</maven.compiler.source>
     </properties>
