Add self-internal tests from Golang.
TODO: load sdk and service information for validationd.

--- a/.tools/validation/test_resources/formaterror_metadata.yaml
+++ b/.tools/validation/test_resources/formaterror_metadata.yaml
@@ -6,6 +6,7 @@ WrongNameFormat:
     Java:
       versions:
         - sdk_version: 2
+          block_content: test/block
           github: javav2/example_code/sns
   services:
     sns:
