Add getting started with bedrock

--- a/php/example_code/composer.json
+++ b/php/example_code/composer.json
@@ -16,6 +16,7 @@
       "AwsUtilities\\": "aws_utilities",
 
       "AutoScaling\\": "auto-scaling",
+      "Bedrock\\": "bedrock/",
       "DynamoDb\\": "dynamodb/",
       "DynamoDb\\Basics\\": "dynamodb/dynamodb_basics",
       "DynamoDb\\PartiQL_Basics\\": "dynamodb/partiql_basics",
