--- a/.doc_gen/metadata/bedrock_metadata.yaml
+++ b/.doc_gen/metadata/bedrock_metadata.yaml
@@ -39,6 +39,14 @@ bedrock_ListFoundationModels:
             - description: List the available &BRlong; foundation models.
               snippet_tags:
                 - bedrock.java2.list_foundation_models.main
+    PHP:
+      versions:
+        - sdk_version: 3
+          github: php/example_code/bedrock
+          excerpts:
+            - description:
+              snippet_tags:
+                - php.example_code.bedrock.service.listFoundationModels
     Python:
       versions:
         - sdk_version: 3
