--- a/javav2/example_code/sns/pom.xml
+++ b/javav2/example_code/sns/pom.xml
@@ -8,7 +8,9 @@
     <version>1.0-SNAPSHOT</version>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java.version>11</java.version>
+        <java.version>17</java.version>
+        <maven.compiler.target>17</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source>
     </properties>
     <build>
         <plugins>
@@ -40,7 +42,7 @@
             <dependency>
                 <groupId>software.amazon.awssdk</groupId>
                 <artifactId>bom</artifactId>
-                <version>2.20.123</version>
+                <version>2.21.20</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
