SDK Parser and tests

--- a/.tools/validation/test_resources/entityusage_sdks.yaml
+++ b/.tools/validation/test_resources/entityusage_sdks.yaml
@@ -4,4 +4,7 @@ C++:
     1:
       long: CPPlong
       short: CPP
+      expanded:
+        long: CPPlong
+        short: CPP
   guide: guide-cpp-dev
