add transcribe sos

--- a/.doc_gen/metadata/transcribe_metadata.yaml
+++ b/.doc_gen/metadata/transcribe_metadata.yaml
@@ -43,6 +43,15 @@ transcribe_ListTranscriptionJobs:
   synopsis: list &TSC; transcription jobs.
   category:
   languages:
+    Java:
+      versions:
+        - sdk_version: 2
+          github: javav2/example_code/transcribe
+          sdkguide:
+          excerpts:
+            - description:
+              snippet_tags:
+                - transcribe.java-list-jobs
     .NET:
       versions:
         - sdk_version: 3
