--- a/.doc_gen/metadata/emr_metadata.yaml
+++ b/.doc_gen/metadata/emr_metadata.yaml
@@ -43,7 +43,7 @@ emr_TerminateJobFlows:
       versions:
         - sdk_version: 3
           github: python/example_code/emr
-          sdkguide: 
+          sdkguide:
           excerpts:
             - description:
               snippet_tags:
@@ -65,7 +65,8 @@ emr_AddJobFlowSteps:
             - description: Add a Spark step, which is run by the cluster as soon as it is added.
               snippet_tags:
                 - python.example_code.emr.AddJobFlowSteps
-            - description: Run an &EMR; File System (EMRFS) command as a job step on a cluster.
+            - description:
+                Run an &EMR; File System (EMRFS) command as a job step on a cluster.
                 This can be used to automate EMRFS commands on a cluster instead of running
                 commands manually through an SSH connection.
               snippet_tags:
@@ -128,14 +129,15 @@ emr_Usage_InstallLibrariesWithSsm:
 emr_Scenario_ShortLivedEmrCluster:
   title: Create a short-lived &EMR; cluster and run a step using an &AWS; SDK
   title_abbrev: Create a short-lived &EMR; cluster and run a step
-  synopsis: create a short-lived &EMR; cluster that runs a step and automatically
+  synopsis:
+    create a short-lived &EMR; cluster that runs a step and automatically
     terminates after the step completes.
   category: Scenarios
   languages:
     Python:
       versions:
         - sdk_version: 3
-          github: emr_usage_demo.py
+          github: python/example_code/emr
           block_content: cross_EmrShortLivedCluster_Python_block.xml
   services:
     emr: {}
