Rust: Update custom-root-certificates example.
Closes #5668

--- a/rustv1/examples/Cargo.toml
+++ b/rustv1/examples/Cargo.toml
@@ -18,6 +18,7 @@ members = [
     "cognitosync",
     "concurrency",
     "config",
+    "custom-root-certificates",
     "dynamodb",
     "ebs",
     "ec2",
