--- a/rustv1/examples/custom-root-certificates/Cargo.toml
+++ b/rustv1/examples/custom-root-certificates/Cargo.toml
@@ -11,5 +11,6 @@ aws-config = { features = ["behavior-version-latest"], version = "1.0.1"}
 # bringing our own HTTPs so no need for the default features
 aws-sdk-s3 = "1.2.0"
 tokio = { version = "1.21.2", features = ["full"] }
-rustls = "0.20.7"
-hyper-rustls = { version = "0.23.0", features = ["http2"] }
+rustls = "0.21.9"
+hyper-rustls = { version = "0.24.2", features = ["http2"] }
+aws-smithy-runtime = { version = "1.0.2", features = ["tls-rustls"] }
