--- a/php/composer.json
+++ b/php/composer.json
@@ -1,7 +1,12 @@
 {
     "require": {
         "aws/aws-sdk-php": "^3.209",
-        "phpunit/phpunit": "^9.5"
+        "ext-zip": "*"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9.5",
+        "php-mock/php-mock-phpunit": "*",
+        "squizlabs/php_codesniffer": "3.*"
     },
     "autoload": {
         "psr-0": {
