--- a/rustv1/examples/custom-root-certificates/Cargo.toml
+++ b/rustv1/examples/custom-root-certificates/Cargo.toml
@@ -9,7 +9,7 @@ description = "An example demonstrating setting a custom root certificate with r
 [dependencies]
 aws-config = { features = ["behavior-version-latest"], version = "1.0.1"}
 # bringing our own HTTPs so no need for the default features
-aws-sdk-s3 = "1.2.0"
+aws-sdk-s3 = { version = "1.2.0", default-features = false }
 tokio = { version = "1.21.2", features = ["full"] }
 rustls = "0.21.9"
 hyper-rustls = { version = "0.24.2", features = ["http2"] }
