Update code example to match other .NET code example structure

--- a/dotnetv3/Bedrock/Actions/BedrockActions.csproj
+++ b/dotnetv3/Bedrock/Actions/BedrockActions.csproj
@@ -1,14 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AWSSDK.Bedrock" Version="3.7.201.9" />
+    <PackageReference Include="AWSSDK.Bedrock" Version="3.7.301.2" />
   </ItemGroup>
 
 </Project>
